force-ddd/unmanaged/default/objects/Asset__c/fields/Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Location_Code__c</fullName>
    <label>Location Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Location_Code</valueSetName>
    </valueSet>
</CustomField>