force-ddd/unmanaged/default/objects/Asset__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>In Use</fullName>
            </value>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Broken</fullName>
            </value>
            <value>
                <fullName>Scrapped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>